# backend/routes/userRoutes.js
@@ -1,10 +1,9 @@
 const express = require('express');
+const router = express.Router();
 const userController = require('../controllers/userController');
 
-const router = express.Router();
-
 router.post('/', userController.createUser);
-router.get('/', userController.getAllUsers);
+router.get('/', userController.getUsers);
 router.get('/:id', userController.getUserById);
 router.put('/:id', userController.updateUser);
 router.delete('/:id', userController.deleteUser);
